feat: implement rest controller for Reports
