# backend/src/main/java/com/mav/buildscale/controller/ReportController.java
@@ -7,6 +7,8 @@ import com.mav.buildscale.mapper.ReportMapper;
 import com.mav.buildscale.model.Report;
 import com.mav.buildscale.repository.ReportRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
@@ -23,8 +25,15 @@ public class ReportController implements ReportsApi {
     private final ReportMapper reportMapper;
 
     @Override
-    public ResponseEntity<List<ReportDto>> getReports() {
-        return ReportsApi.super.getReports();
+    public ResponseEntity<List<ReportDto>> getReports(final Integer page, final Integer size, final List<String> sort) {
+        final Pageable pageable = Pageable
+                .ofSize(size)
+                .withPage(page);
+        pageable.getSort().and(Sort.sort(Report.class).by(Report::getCreated).descending());
+        final List<ReportDto> reportDtos = reportRepository.findAll(pageable).stream()
+                .map(reportMapper::mapReportToReportDto)
+                .toList();
+        return ResponseEntity.ok(reportDtos);
     }
 
     @Override
@@ -38,6 +47,8 @@ public class ReportController implements ReportsApi {
 
     @Override
     public ResponseEntity<ReportDto> getReportById(final String reportId) {
-        return ReportsApi.super.getReportById(reportId);
+        return reportRepository.findById(reportId)
+                .map(report -> ResponseEntity.ok(reportMapper.mapReportToReportDto(report)))
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
 }
